Header/Hlavička webu

--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <!--HEADER-->
+    <header class="header">
+        <div class="container">
+            <div class="header-wrap">
+                <div class="header-left">
+                    <div class="header-logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="Run">
+                        </a>
+                    </div>
+                    <div class="header-menu">
+                        <div class="header-menu__button">
+                            <img src="img/iconMenu.svg" alt="Tečky">
+                            <span>Menu</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-right">
+                    <div class="header-icons">
+                        <img src="img/Buy.svg" alt="Koupit">
+                        <img src="img/Search.svg" alt="Vyhledat">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
+    <!--NABÍDKA-->
+    <section class="offer"></section>
+    <!--PROČ MY-->
+    <section class="why"></section>
+    <!--V PRODEJI-->
+    <section class="scooters"></section>
+    <!--KLIENTI-->
+    <section class="reviews"></section>
+    <!--FOOTER-->
+    <section class="footer"></section>
+
 </body>
 </html>
