--- a/index.html
+++ b/index.html
@@ -42,7 +42,31 @@
 
 
     <!--NABÍDKA-->
-    <section class="offer"></section>
+    <section class="offer">
+        <div class="container">
+            <div class="offer-wrap">
+                <div class="offer-left">
+                    <div class="offer-text">
+                        <h1 class="offer-header">
+                            Prodáváme elektro-koloběžky
+                        </h1>
+                        <p class="offer-desc">
+                            Katalog 38 modelů koloběžek. Každá z nich bude doručena v den objednávky, díky naší logistické technologii a inovacím
+                        </p>
+                        <div class="offer-buttons">
+                            <a href="#">Zobrazit katalog</a>
+                            <a href="#">Zavolejte mi</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-right">
+                    <div class="offer-image">
+                        <img src="img/mainImage.png" alt="Koloběžka">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--PROČ MY-->
     <section class="why"></section>
     <!--V PRODEJI-->
