--- a/index.html
+++ b/index.html
@@ -228,14 +228,13 @@
             
         </div>
     </section>
-
     <!--KLIENTI-->
     <section class="reviews">
         <div class="container">
             <div class="reviews-block">
                 <div class="reviews-info">
                     <h2 class="reviews-header">
-                        Klienti říkají
+                        Klienti <br> říkají
                     </h2>
                     <div class="reviews-model">
                         Model
