--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             </div>
         </div>
     </section>
+
+
+
+
     <!--PROČ MY-->
     <section class="why">
         <div class="container">
@@ -71,22 +75,31 @@
                     </h2>
                     <div class="why-items">
                         <div class="why-item">
-                            <img src="img/point.svg" alt="Místo">
+                            <img src="img/point.svg" alt="">
                             <p>Rychlost objednávky — <br><span> koloběžka u Vás v den objednání</span></p>
                         </div>
                         <div class="why-item">
-                            <img src="img/star.svg" alt="Hvězda">
-                            <p>Roky zkušeností —<br><span> na trhu již 12 let</span></p>
+                            <img src="img/star.svg" alt="">
+                            <p>Roky zkušeností — <br><span> na trhu již 12 let</span></p>
                         </div>
                         <div class="why-item">
-                            <img src="img/love.png" alt="Srdce">
-                            <p>Důvěra zákazníků —<br><span> 362 kladných recenzí</span></p>
+                            <img src="img/love.png" alt="">
+                            <p>Důvěra zákazníků — <br><span> 362 kladných recenzí</span></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
     <!--V PRODEJI-->
     <section class="scooters">
         <div class="container">
@@ -307,19 +320,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!--FOOTER-->
